--- a/package.json
+++ b/package.json
@@ -107,7 +107,9 @@
   "private": true,
   "dependencies": {
     "chalk": "latest",
-    "ts-aoc-starter": "1.0.2"
+    "mathjs": "^12.2.0",
+    "ts-aoc-starter": "1.0.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@nx/workspace": "17.1.3",
