--- a/package.json
+++ b/package.json
@@ -107,7 +107,9 @@
   "private": true,
   "dependencies": {
     "chalk": "latest",
+    "dijkstrajs": "^1.0.3",
     "mathjs": "^12.2.0",
+    "point-in-polygon": "^1.1.0",
     "ts-aoc-starter": "1.0.2",
     "ts-node": "^10.9.2"
   },
