--- a/package.json
+++ b/package.json
@@ -106,8 +106,11 @@
   },
   "private": true,
   "dependencies": {
+    "@type-cacheable/core": "^13.0.0",
+    "@type-cacheable/lru-cache-adapter": "^16.0.1",
     "chalk": "latest",
     "dijkstrajs": "^1.0.3",
+    "lru-cache": "^10.1.0",
     "mathjs": "^12.2.0",
     "point-in-polygon": "^1.1.0",
     "ts-aoc-starter": "1.0.2",
