--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
     "mathjs": "^12.2.0",
     "point-in-polygon": "^1.1.0",
     "ts-aoc-starter": "1.0.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "z3-solver": "^4.12.4"
   },
   "devDependencies": {
     "@nx/workspace": "17.1.3",
